--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.0.2+1
   path_provider: ^2.0.11
   google_nav_bar: ^5.0.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
